kubernetes/apps/matrix/hookshot/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: hookshot-redis
  namespace: matrix
spec:
  selector:
    app.kubernetes.io/name: hookshot-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hookshot-redis
  namespace: matrix
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: hookshot-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hookshot-redis
    spec:
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
